--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -51,7 +51,11 @@
 }
 
 .about-teaser-section {
-  padding: 8rem 2rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 2rem;
 }
 
 .about-teaser-text p {
